Добавление коллекции invitation
